--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.3.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.timetracker</groupId>
+    <groupId>com.timetracker.timetrackerapptesttask</groupId>
     <artifactId>time-tracker-app-test-task</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>time-tracker-app-test-task</name>
@@ -111,11 +111,11 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-antrun-plugin</artifactId>-->
+<!--                <version>3.1.0</version>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
